Fix package name casing in package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "Junaidniz786-api",
+  "name": "junaidniz786-api",
   "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node index.js"
-  }
+  "private": true
 }
